fixes colorpicker overflowing edge of screen

--- a/app/assets/stylesheets/visualizations.css.scss
+++ b/app/assets/stylesheets/visualizations.css.scss
@@ -215,6 +215,14 @@ body[data-page-name='visualizations/show'] .visualizations-controller,
     color: $hint;
   }
 
+  .outer_control_div table {
+    width: 100%;
+    .label-dataset-color {
+      float: right;
+      width: 20px;
+    }
+  }
+
   // photos sometimes needs a scrollbar
   #photos_canvas {
     overflow-y: auto;
